<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_profilr">ProfilrActivity</string>

    <!-- Strings profile activity -->
    <string name="image_du__voisin">Image voisin</string>
    <string name="facebook">www.facebook.fr/ </string>
    <string name="boutton_retour_en_arriere">Fleche retour</string>
    <string name="prenom_du_voisin">Texte prenom</string>
    <string name="ajout_favoris">Boutton ajoutfavoris</string>
    <string name="prenon_card">Prenom card</string>
    <string name="icone_localisation">Icone localisation</string>
    <string name="icone_telephone">Icone telephone</string>
    <string name="icone_web">Icone web</string>
    <string name="txte_adresse">Texte adresse</string>
    <string name="txte_telephone">Texte telephone</string>
    <string name="texte_web">texte web</string>
    <string name="textprenom">TextPrenom</string>
    <string name="textAProposDeMoi">A propos de moi</string>
    <string name="extDescription">Description du voisin</string>


</resources>
